# virtual_reality_book

ch02_androidintro/: build.gradle
ch02_androidintro/src/main/: AndroidManifest.xml
ch03_lifecycle/src/main/: AndroidManifest.xml
ch03_stringargument/: build.gradle
ch03_stringargument/src/main/: AndroidManifest.xml
ch04_bitmapbuilder/: build.gradle
ch04_bitmapbuilder/src/main/: AndroidManifest.xml
ch04_imagematrix/: build.gradle
ch04_imagematrix/src/main/: AndroidManifest.xml
ch05_asynctask/: build.gradle
ch05_asynctask/src/main/: AndroidManifest.xml
ch05_basichandler/: build.gradle
ch05_basichandler/src/main/: AndroidManifest.xml
ch06_emptyscreen/src/main/: AndroidManifest.xml
ch07_orangescreen/: build.gradle
ch07_orangescreen/src/main/: AndroidManifest.xml
ch07_triangle/: build.gradle
ch08_fourtriangles/: build.gradle
ch09_cubes/: build.gradle
ch10_simpletexture/: build.gradle
ch10_textdemo/: build.gradle
ch11_rendertexture/: build.gradle
ch12_controllerreader/: build.gradle
ch12_targeting/: build.gradle
ch13_audioplayer/: build.gradle
ch14_blankscreen/: CMakeLists.txt  build.gradle
ch14_blankscreen/src/main/jni/: CMakeLists.txt  blankscreen.cpp  blankscreen_renderer.cpp  blankscreen_renderer.h
ch15_spinningtexture/: CMakeLists.txt  build.gradle
ch16_mediaplayer/: CMakeLists.txt  build.gradle
ch16_mediaplayer/src/main/jni/: CMakeLists.txt  freetypeutils.cpp  freetypeutils.h  matrixutils.cpp  mediaplayer.cpp  mediaplayer_renderer.cpp  mediaplayer_renderer.h  shaderutils.cpp  shaderutils.h
(+113 files in other folders)
